--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,19 @@ body {
 	line-height: 1;
 }
 
+li {
+	display: inline;
+  }
+
+li a {
+	display: inline;
+	color: white;
+	text-align: center;
+
+	text-decoration: none;
+  }
+
+
 ol, ul {
 	list-style: none;
 }
@@ -2600,7 +2613,7 @@ input, select, textarea {
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
-		padding: 8em 4em;
+		padding: 8em 2em;
 		position: fixed;
 		text-align: right;
 		top: 0;
