--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2877,7 +2877,7 @@ input, select, textarea {
 
 			.poptrox-popup .nav-next:before,
 			.poptrox-popup .nav-previous:before {
-				color: #fff;
+				color: black;
 				font-size: 2.5em;
 				height: 1em;
 				line-height: 1em;
