--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2939,7 +2939,7 @@ input, select, textarea {
 			-ms-transition: opacity 0.2s ease-in-out;
 			transition: opacity 0.2s ease-in-out;
 			-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-			color: #fff;
+			color: black;
 			height: 4em;
 			line-height: 4em;
 			opacity: 0;
